[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "arlin"
version = "1.0.0"
description = "Adversarial Reinforcement Learning for Model Interrogation"
authors = ["Alex Tapley <atapley@mitre.org>"]
readme = "README.md"
keywords = ["python", "reinforcement learning", "adversarial", "explainable"]
repository = "https://gitlab.mitre.org/advxai/arlin"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.25.1"
stable-baselines3 = "^2.0.0"
huggingface-sb3 = "^2.2.5"
gym = "^0.26.2"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.0"
networkx = "^3.1"
torch = "2.0.0"
ptable = "^0.9.2"
gymnasium = {version = "0.28.1", extras = ["box2d"]}
shimmy = "^1.2.1"