[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "arlin"
version = "1.0.0"
description = "Assured Reinforcement Learning for Model Interrogation"
authors = ["Alex Tapley <atapley@mitre.org>"]
readme = "README.md"
keywords = ["python", "reinforcement learning", "adversarial", "explainable", "assurance"]
repository = "https://github.com/mitre/arlin"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.25.1"
stable-baselines3 = "^2.0.0"
huggingface-sb3 = "^2.2.5"
gym = "^0.26.2"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.0"
networkx = "^3.1"
torch = "2.0.0"
ptable = "^0.9.2"
gymnasium = {version = "0.28.1", extras = ["box2d"]}
shimmy = "^1.2.1"
ipykernel = "^6.25.0"
jupyter = "^1.0.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.5"}
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6"
sphinx-autoapi = "^2.1.1"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^1.2.2"

[tool.poetry.group.coverage.dependencies]
pytest-cov = "^4.1.0"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2
lines_between_sections = 1
honor_noqa = true
skip_gitignore = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B311"]
